tests/snapshots/files__count-optimize-no-ctx.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 100000
@main(v0: int) {
  c1_: int = const 2;
  v2_: int = mul c1_ v0;
  v3_: bool = lt c1_ v2_;
  v4_: ptr<int> = alloc v2_;
  c5_: int = const 1;
  v6_: ptr<int> = ptradd v4_ c5_;
  c7_: int = const 0;
  store v4_ c7_;
  store v6_ c5_;
  v8_: ptr<int> = id v4_;
  v9_: int = id c1_;
  v10_: int = id v2_;
  br v3_ .b11_ .b12_;
.b11_:
  v13_: ptr<int> = id v4_;
  v14_: int = id c1_;
  v15_: int = id v2_;
.b16_:
  c17_: int = const 1;
  v18_: int = add c17_ v14_;
  v19_: ptr<int> = ptradd v13_ v18_;
  v20_: ptr<int> = ptradd v13_ v14_;
  c21_: int = const -1;
  v22_: ptr<int> = ptradd v20_ c21_;
  v23_: int = load v22_;
  v24_: int = add c17_ v23_;
  v25_: int = add c17_ v24_;
  store v20_ v24_;
  store v19_ v25_;
  v26_: int = add c17_ v18_;
  v27_: bool = lt v26_ v15_;
  v13_: ptr<int> = id v13_;
  v14_: int = id v26_;
  v15_: int = id v15_;
  br v27_ .b16_ .b28_;
.b28_:
  v8_: ptr<int> = id v13_;
  v9_: int = id v14_;
  v10_: int = id v15_;
  v29_: ptr<int> = ptradd v8_ v9_;
  c30_: int = const -1;
  v31_: ptr<int> = ptradd v29_ c30_;
  v32_: int = load v31_;
  free v8_;
  print v32_;
  ret;
  jmp .b33_;
.b12_:
  v29_: ptr<int> = ptradd v8_ v9_;
  c30_: int = const -1;
  v31_: ptr<int> = ptradd v29_ c30_;
  v32_: int = load v31_;
  free v8_;
  print v32_;
  ret;
.b33_:
}
