tests/snapshots/files__diamond-optimize-no-ctx.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 3
@main(v0: int) {
  c1_: int = const 2;
  print c1_;
  ret;
}
