tests/snapshots/files__diamond-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 3
@main(v0: int) {
.b1_:
  v2_: bool = lt v0 v0;
  br v2_ .b3_ .b4_;
.b3_:
  c5_: int = const 1;
  print c5_;
  ret;
.b4_:
  c6_: int = const 2;
  print c6_;
.b7_:
}
