tests/snapshots/files__diamond-peg.snap
---
source: tests/files.rs
expression: visualization.result
---
digraph G {
subgraph {
node [ordering=out];
v0 [label="arg 0"];
v1 [label="arg 0"];
v2 [label="lt"];
v3 [label="int"];
v4 [label="arg 1"];
v5 [label="PRINT"];
v6 [label="int"];
v7 [label="arg 1"];
v8 [label="PRINT"];
v9 [label="Φ"];
v2 -> v0;
v2 -> v1;
v5 -> v3;
v5 -> v4;
v8 -> v6;
v8 -> v7;
v9 -> v2;
v9 -> v5;
v9 -> v8;
}
}

