tests/snapshots/files__diamond-rvsdg.snap
---
source: tests/files.rs
expression: visualization.result
---
<svg
	height="750"
	version="1.1"
	width="1025"
	xmlns="http://www.w3.org/2000/svg">
	<g
		transform="translate(0, 0)">
		<rect
			fill="white"
			height="750"
			rx="10"
			stroke="black"
			stroke-width="2"
			width="1025">
		</rect>
		<g>
			<path
				d="M 341.66666 0V 10Q 341.66666 20 331.66666 20H 93.33333Q 83.33333 20 83.33333 30V 50"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 341.66666 0V 10Q 341.66666 20 331.66666 20H 126.666664Q 116.666664 20 116.666664 30V 50"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 683.3333 0V 20Q 683.3333 30 693.3333 30H 706.6667Q 716.6667 30 716.6667 40V 200"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 100 150V 165Q 100 175 110 175H 448.33334Q 458.33334 175 458.33334 185V 200"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 587.5 700V 715Q 587.5 725 577.5 725H 522.5Q 512.5 725 512.5 735V 750"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
		</g>
		<g>
			<g
				transform="translate(50, 50)">
				<g>
					<rect
						fill="#FFFF80"
						height="100"
						rx="10"
						stroke="black"
						stroke-width="2"
						width="100">
					</rect>
					<text
						fill="black"
						font-size="50"
						text-anchor="middle"
						x="50"
						y="62.5">
						lt
					</text>
				</g>
				<circle
					cx="33.333332"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="66.666664"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="50"
					cy="100"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
			</g>
			<g
				transform="translate(200, 200)">
				<rect
					fill="#80FF80"
					height="500"
					rx="10"
					stroke="black"
					stroke-width="2"
					width="775">
				</rect>
				<text
					fill="black"
					font-size="50"
					x="25"
					y="50">
					match
				</text>
				<g>
					<g
						transform="translate(25, 125)">
						<rect
							fill="white"
							height="350"
							rx="10"
							stroke="black"
							stroke-width="2"
							width="350">
						</rect>
						<g>
							<path
								d="M 175 0V 15Q 175 25 185 25H 256.66666Q 266.66666 25 266.66666 35V 200"
								fill="transparent"
								stroke="black"
								stroke-linecap="round"
								stroke-width="2">
							</path>
							<path
								d="M 100 150V 165Q 100 175 110 175H 223.33333Q 233.33333 175 233.33333 185V 200"
								fill="transparent"
								stroke="black"
								stroke-linecap="round"
								stroke-width="2">
							</path>
							<path
								d="M 250 300V 315Q 250 325 240 325H 185Q 175 325 175 335V 350"
								fill="transparent"
								stroke="black"
								stroke-linecap="round"
								stroke-width="2">
							</path>
						</g>
						<g>
							<g
								transform="translate(50, 50)">
								<g>
									<rect
										fill="#FFFF80"
										height="100"
										rx="10"
										stroke="black"
										stroke-width="2"
										width="100">
									</rect>
									<text
										fill="black"
										font-size="50"
										text-anchor="middle"
										x="50"
										y="62.5">
										2
									</text>
								</g>
								<circle
									cx="50"
									cy="100"
									fill="white"
									r="4"
									stroke="black"
									stroke-width="2">
								</circle>
							</g>
							<g
								transform="translate(200, 200)">
								<g>
									<rect
										fill="#FFFF80"
										height="100"
										rx="10"
										stroke="black"
										stroke-width="2"
										width="100">
									</rect>
									<text
										fill="black"
										font-size="50"
										text-anchor="middle"
										x="50"
										y="62.5">
										PRINT
									</text>
								</g>
								<circle
									cx="33.333332"
									cy="0"
									fill="white"
									r="4"
									stroke="black"
									stroke-width="2">
								</circle>
								<circle
									cx="66.666664"
									cy="0"
									fill="white"
									r="4"
									stroke="black"
									stroke-width="2">
								</circle>
								<circle
									cx="50"
									cy="100"
									fill="white"
									r="4"
									stroke="black"
									stroke-width="2">
								</circle>
							</g>
						</g>
						<g>
							<circle
								cx="175"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
						</g>
						<g>
							<circle
								cx="175"
								cy="350"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
						</g>
					</g>
					<text
						fill="black"
						font-size="50"
						text-anchor="middle"
						x="200"
						y="100">
						0
					</text>
				</g>
				<g>
					<g
						transform="translate(400, 125)">
						<rect
							fill="white"
							height="350"
							rx="10"
							stroke="black"
							stroke-width="2"
							width="350">
						</rect>
						<g>
							<path
								d="M 175 0V 15Q 175 25 185 25H 256.66666Q 266.66666 25 266.66666 35V 200"
								fill="transparent"
								stroke="black"
								stroke-linecap="round"
								stroke-width="2">
							</path>
							<path
								d="M 100 150V 165Q 100 175 110 175H 223.33333Q 233.33333 175 233.33333 185V 200"
								fill="transparent"
								stroke="black"
								stroke-linecap="round"
								stroke-width="2">
							</path>
							<path
								d="M 250 300V 315Q 250 325 240 325H 185Q 175 325 175 335V 350"
								fill="transparent"
								stroke="black"
								stroke-linecap="round"
								stroke-width="2">
							</path>
						</g>
						<g>
							<g
								transform="translate(50, 50)">
								<g>
									<rect
										fill="#FFFF80"
										height="100"
										rx="10"
										stroke="black"
										stroke-width="2"
										width="100">
									</rect>
									<text
										fill="black"
										font-size="50"
										text-anchor="middle"
										x="50"
										y="62.5">
										1
									</text>
								</g>
								<circle
									cx="50"
									cy="100"
									fill="white"
									r="4"
									stroke="black"
									stroke-width="2">
								</circle>
							</g>
							<g
								transform="translate(200, 200)">
								<g>
									<rect
										fill="#FFFF80"
										height="100"
										rx="10"
										stroke="black"
										stroke-width="2"
										width="100">
									</rect>
									<text
										fill="black"
										font-size="50"
										text-anchor="middle"
										x="50"
										y="62.5">
										PRINT
									</text>
								</g>
								<circle
									cx="33.333332"
									cy="0"
									fill="white"
									r="4"
									stroke="black"
									stroke-width="2">
								</circle>
								<circle
									cx="66.666664"
									cy="0"
									fill="white"
									r="4"
									stroke="black"
									stroke-width="2">
								</circle>
								<circle
									cx="50"
									cy="100"
									fill="white"
									r="4"
									stroke="black"
									stroke-width="2">
								</circle>
							</g>
						</g>
						<g>
							<circle
								cx="175"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
						</g>
						<g>
							<circle
								cx="175"
								cy="350"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
						</g>
					</g>
					<text
						fill="black"
						font-size="50"
						text-anchor="middle"
						x="575"
						y="100">
						1
					</text>
				</g>
				<circle
					cx="258.33334"
					cy="0"
					fill="black"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="516.6667"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="387.5"
					cy="500"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
			</g>
		</g>
		<g>
			<circle
				cx="341.66666"
				cy="0"
				fill="white"
				r="4"
				stroke="black"
				stroke-width="2">
			</circle>
			<circle
				cx="683.3333"
				cy="0"
				fill="white"
				r="4"
				stroke="black"
				stroke-width="2">
			</circle>
		</g>
		<g>
			<circle
				cx="512.5"
				cy="750"
				fill="white"
				r="4"
				stroke="black"
				stroke-width="2">
			</circle>
		</g>
	</g>
</svg>

