tests/snapshots/files__diamond-structured.snap
---
source: tests/files.rs
expression: result.visualization
---
main {
block:
 block:
  block:
   x: int = const 4;
   cond: bool = lt x x;
   if cond:
    break 2
   else:
    break 1
  a: int = const 2;
  break 1
 a: int = const 1;
block:
 w: int = const 2;
 return

}
